--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,63 +1,45 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /*Formatação de todas as tags h1 e h2 com tamanho, cor e sombras*/
 h1,h2{ font-family: Verdana;
     font-size: 36px;
     color:black;
     text-shadow: 2px 2px 2px yellow;
+    font-style: oblique;
+    margin: 1.3%;
 }
 /*Formatação de todas as tags h3 com tamanho e sombra*/
 h3{
   font-size: 28px;
   text-shadow: 2px 2px 2px yellow;
+  margin: 1.3%;
 }
 /*Fundo da pagina formatado com cor*/
 body{
-    background-color: rgb(158, 189, 247);
-
+    background-image: url(../imagens/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 /*Propriedades de  de margem e corpo da pagine e o seu preenchimento*/
 body,html{
      margin: 0;
      padding: 0; 
-
 } 
 /*Propriedades de posição do conteiner*/ 
 .container{
   position: relative;
 }
-/*Propriedades do conteiner texto_imagem e h1 para que o texto fique sempre  sobre a imagem*/
-.texto_imagem h1{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-    padding: 20px;
-    text-align: left;
-    margin: 0;
-
-}
 /*Propriedade de margem do conteiner texto_imagem*/
 .texto_imagem{
     margin: 10px;
 }
-
-/*Propriedades do conteiner fisiologia com formatos de imagens e paragrafos*/
-.fisiologia{
-   overflow: hidden;
-}
-.fisiologia img{
-    float: right;
-    margin-left: 10px;
-    margin-right: 70px;
-}
-.fisiologia p{
-    margin:0 ;
-    font-size: 20px;
-}
-
 /*Propriedades do conteiner habilidades com formatos de imagens e paragrafos*/
 .habilidades{
     overflow: hidden;
+    width: 100%; 
+    height: auto;
+    position: relative;
 }
 .habilidades img{
     float: right;
@@ -67,37 +49,103 @@ body,html{
     border: 1px solid;
 }
 .habilidades p{
-    margin: 0 ;
+    margin: 1.3% ;
     font-size: 20px;
 }
-
-
 /*Propriedades do conteiner comportamento com formatos de imagens e paragrafos*/
 .comportamento{
    overflow: hidden;
-
-   
+   width: 100%; 
+   height: auto;  
 }
 .comportamento img{
     float: right;
-     margin-left:100px;
-     margin-top: 80px;
-     margin-right: 60px;
-     border: 1px solid;
+    margin-left:100px;
+    margin-top: 80px;
+    margin-right: 60px;
+    border: 1px solid;
 }
 .comportamento p{
-        margin: 0 ;
-        font-size: 20px;
+    margin: 1.3% ;
+    font-size: 20px;
 }
 
 /*Formatação do menu com tamanho das fontes da lista e a propriedade de margem*/
-.menu{
-    margin-top: -80px;    
+#menu{
+    max-width: 600px;
+    float: right;
+    margin-right: 16%;
+    margin-top: -60px;
+    list-style: none;
+    padding: 0;
+    background-color: rgb(0, 0, 0,0);   
 }
-.menu li{
+#menu li{  
+    display: inline; 
     font-size: 18px;
 }
+#menu li, a{
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    transition: 0.5s;
+}
+#menu li a:hover{
+    color: rgb(209, 198, 45);
+    text-shadow: 0 0 0px rgb(206, 195, 39) ; 
+ }
+/*paramentros para os paragrafo das faixas de audio*/
 .trilhaMonstro p{
-    margin: 0 ;
+    margin: 1.3% ;
     font-size: 20px;
+    text-shadow: 2px 2px 2px yellow;
+}
+/*paramentros para os paragrafos*/
+p{
+    font-family: "Roboto", sans-serif;
+    text-shadow: 1px 1px 1px gray;
+    margin: 1.3% ;
+    font-size: 20px;
+    
+}
+/*Diminuindo a pagina para ter um efeito de uma princial e uma com img de background*/
+.principal{
+    width: 70%;
+    float: right;
+    margin-right: 16%;
+    border: 1px solid rgb(85, 78, 78);
+    box-shadow: 3px 3px 5px gray;
+    background-color: rgb(164, 177, 206,0.75);
+}
+/*Propriedades da galeria de fotos e  criação da animção do carrossel de fotos*/
+.galeria{
+    width: 360px;
+    height: 290px;
+    overflow: hidden;
+  
+}
+.galeria .fotos{
+    width: 500%;
+    animation-name: animacao;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+}
+.galeria .fotos img{
+    width: 19.9%;   
+}
+/*animação do carrossel de fotos por meio de frames*/
+@keyframes animacao{
+    0%{margin-left: 0;}
+    20%{margin-left: 0;}
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+    75%{margin-left: -300%;}
+    95%{margin-left: -300%;}
+    100%{margin-left: -400%;}
+}
+hr{
+  box-shadow: 3px 3px 5px gray;  
 }
