--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,6 +7,7 @@ h1,h2{ font-family: Verdana;
     text-shadow: 2px 2px 2px yellow;
     font-style: oblique;
     margin: 1.3%;
+    font-size: clamp(2em, 5em + 3vw, 7.5m);
 }
 /*Formatação de todas as tags h3 com tamanho e sombra*/
 h3{
@@ -14,56 +15,62 @@ h3{
   text-shadow: 2px 2px 2px yellow;
   margin: 1.3%;
 }
-/*Fundo da pagina formatado com cor*/
+/*Fundo da pagina formatado com cor e responsividade do background*/
 body{
     background-image: url(../imagens/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: center;
+    margin: 0;
+    padding: 0;
+}
+@media only screen and (max-width: 600px) {
+    body {
+      font-size: 14px;
+      background-size: auto;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 }
 /*Propriedades de  de margem e corpo da pagine e o seu preenchimento*/
 body,html{
      margin: 0;
      padding: 0; 
 } 
-/*Propriedades de posição do conteiner*/ 
-.container{
-  position: relative;
-}
-/*Propriedade de margem do conteiner texto_imagem*/
-.texto_imagem{
-    margin: 10px;
-}
-/*Propriedades do conteiner habilidades com formatos de imagens e paragrafos*/
+
+/*Propriedades do conteiner habilidades com formatos de imagens e paragrafos e reponsividade das imagens e texto*/
 .habilidades{
     overflow: hidden;
     width: 100%; 
     height: auto;
     position: relative;
+    
 }
 .habilidades img{
-    float: right;
-    margin-left: 100px;
-    margin-top: 100px;
-    margin-right: 70px;
+    display: block;
+    margin: 0 auto; 
     border: 1px solid;
+    max-width: 100%;
+    height: auto;
 }
 .habilidades p{
     margin: 1.3% ;
     font-size: 20px;
 }
-/*Propriedades do conteiner comportamento com formatos de imagens e paragrafos*/
+/*Propriedades do conteiner comportamento com formatos de imagens e paragrafos e reponsividade das imagens e texto*/
 .comportamento{
    overflow: hidden;
    width: 100%; 
-   height: auto;  
+   height: auto;
+     
 }
 .comportamento img{
-    float: right;
-    margin-left:100px;
-    margin-top: 80px;
-    margin-right: 60px;
+ 
+    display: block;
+    margin: 0 auto; 
     border: 1px solid;
+    max-width: 100%;
+    height: auto;
 }
 .comportamento p{
     margin: 1.3% ;
@@ -78,8 +85,11 @@ body,html{
     margin-top: -60px;
     list-style: none;
     padding: 0;
-    background-color: rgb(0, 0, 0,0);   
-}
+    background-color: rgb(0, 0, 0,0);
+    display: flex; 
+    justify-content: flex-end; 
+
+}   
 #menu li{  
     display: inline; 
     font-size: 18px;
@@ -95,19 +105,36 @@ body,html{
     color: rgb(209, 198, 45);
     text-shadow: 0 0 0px rgb(206, 195, 39) ; 
  }
-/*paramentros para os paragrafo das faixas de audio*/
+/* Responsividade do menu */
+@media only screen and (max-width: 600px) {
+    #menu {
+        flex-direction: column; 
+        align-items: flex-end; 
+    }
+
+    #menu li {
+        margin-left: 0; 
+        margin-bottom: 5px;
+    }
+}
+/*responsividade da faixa de audio e seus parametros*/
 .trilhaMonstro p{
-    margin: 1.3% ;
     font-size: 20px;
     text-shadow: 2px 2px 2px yellow;
+    
 }
+audio {
+    width: 100%;
+    max-width: 600px; 
+    margin: 0 auto; 
+    display: block;
+  }
 /*paramentros para os paragrafos*/
 p{
     font-family: "Roboto", sans-serif;
     text-shadow: 1px 1px 1px gray;
     margin: 1.3% ;
-    font-size: 20px;
-    
+    font-size: 20px;  
 }
 /*Diminuindo a pagina para ter um efeito de uma princial e uma com img de background*/
 .principal{
@@ -117,12 +144,16 @@ p{
     border: 1px solid rgb(85, 78, 78);
     box-shadow: 3px 3px 5px gray;
     background-color: rgb(164, 177, 206,0.75);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 /*Propriedades da galeria de fotos e  criação da animção do carrossel de fotos*/
 .galeria{
-    width: 360px;
-    height: 290px;
+    width: 100%;
     overflow: hidden;
+    max-width: 600px;
+    margin: 0 auto;
   
 }
 .galeria .fotos{
@@ -130,9 +161,14 @@ p{
     animation-name: animacao;
     animation-duration: 20s;
     animation-iteration-count: infinite;
+    white-space: nowrap;
 }
 .galeria .fotos img{
-    width: 19.9%;   
+    width: 19.9%;
+    max-width: 100%;
+    height: auto;
+    display: inline-block; 
+ 
 }
 /*animação do carrossel de fotos por meio de frames*/
 @keyframes animacao{
@@ -148,4 +184,72 @@ p{
 }
 hr{
   box-shadow: 3px 3px 5px gray;  
+}
+/*parametros para imagens e responsividade*/
+img{
+    max-width: 100%;
+    height: auto;
+}
+/*paramentros dos mapas para deixar imagens responsivas e enquadradas no layot*/
+.foresthills img{
+    display: block;
+    margin: 0 auto; 
+    border: 1px solid;
+    max-width: 100%;
+    height: auto;
+    box-shadow: 3px 3px 5px gray; 
+}
+
+.jungle img{
+    display: block;
+    margin: 0 auto; 
+    border: 1px solid;
+    max-width: 100%;
+    height: auto;
+    box-shadow: 3px 3px 5px gray; 
+}
+
+.desert img{
+    display: block;
+    margin: 0 auto; 
+    border: 1px solid;
+    max-width: 100%;
+    height: auto;
+    box-shadow: 3px 3px 5px gray; 
+}
+
+.swamp img{
+    display: block;
+    margin: 0 auto; 
+    border: 1px solid;
+    max-width: 100%;
+    height: auto;
+    box-shadow: 3px 3px 5px gray; 
+}
+
+.vulcano img{
+    display: block;
+    margin: 0 auto; 
+    border: 1px solid;
+    max-width: 100%;
+    height: auto;
+    box-shadow: 3px 3px 5px gray; 
+}
+/*Parametros para layot de video e matendo ele responsivel em outros dispositivos*/
+.gameplay video{
+    display: block;
+    margin: 0 auto; 
+    border: 1px solid;
+    max-width: 100%;
+    height: auto;
+}
+/*Conteiner iframe alinhando no centro da pagina*/
+.iframe{
+    text-align: center;
+}
+/*tag iframe com responsividade*/
+iframe{
+    width: 100%;
+    max-width: 500px;
+    height: 250px;
 }
