--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,18 +1,38 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-/*Formatação de todas as tags h1 e h2 com tamanho, cor e sombras*/
-h1,h2{ font-family: Verdana;
-    font-size: 36px;
-    color:black;
-    text-shadow: 2px 2px 2px yellow;
+
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+
+/*Formatação de todas as tags h1, h2 e h3 com tamanho, cor e sombras*/
+h1{
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-size: 12px;
+    color:rgb(0, 0, 0);
+    text-shadow: 1px 1px 1px yellow;
+    font-style: oblique;
+    margin: 1.3%;
+    font-size: clamp(2em, 5em + 3vw, 7.5m);
+
+}
+h2{   
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-size: 35px;
+    color:rgb(0, 0, 0);
+    text-shadow: 1px 1px 1px yellow;
     font-style: oblique;
     margin: 1.3%;
     font-size: clamp(2em, 5em + 3vw, 7.5m);
 }
 /*Formatação de todas as tags h3 com tamanho e sombra*/
 h3{
-  font-size: 28px;
-  text-shadow: 2px 2px 2px yellow;
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;  
+  font-size: 30px;
+  text-shadow: 1px 1px 1px yellow;
   margin: 1.3%;
 }
 /*Fundo da pagina formatado com cor e responsividade do background*/
@@ -23,6 +43,8 @@ body{
     background-position: center;
     margin: 0;
     padding: 0;
+    display: flex;
+    min-height: 100vh;
 }
 @media only screen and (max-width: 600px) {
     body {
@@ -36,6 +58,7 @@ body{
 body,html{
      margin: 0;
      padding: 0; 
+     margin-left: 50px;
 } 
 
 /*Propriedades do conteiner habilidades com formatos de imagens e paragrafos e reponsividade das imagens e texto*/
@@ -55,7 +78,7 @@ body,html{
 }
 .habilidades p{
     margin: 1.3% ;
-    font-size: 20px;
+    font-size: 22px;
 }
 /*Propriedades do conteiner comportamento com formatos de imagens e paragrafos e reponsividade das imagens e texto*/
 .comportamento{
@@ -74,52 +97,11 @@ body,html{
 }
 .comportamento p{
     margin: 1.3% ;
-    font-size: 20px;
-}
-
-/*Formatação do menu com tamanho das fontes da lista e a propriedade de margem*/
-#menu{
-    max-width: 600px;
-    float: right;
-    margin-right: 16%;
-    margin-top: -60px;
-    list-style: none;
-    padding: 0;
-    background-color: rgb(0, 0, 0,0);
-    display: flex; 
-    justify-content: flex-end; 
-
-}   
-#menu li{  
-    display: inline; 
-    font-size: 18px;
-}
-#menu li, a{
-    display: inline-block;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    padding: 10px;
-    transition: 0.5s;
-}
-#menu li a:hover{
-    color: rgb(209, 198, 45);
-    text-shadow: 0 0 0px rgb(206, 195, 39) ; 
- }
-/* Responsividade do menu */
-@media only screen and (max-width: 600px) {
-    #menu {
-        flex-direction: column; 
-        align-items: flex-end; 
-    }
-
-    #menu li {
-        margin-left: 0; 
-        margin-bottom: 5px;
-    }
+    font-size: 22px;
 }
 /*responsividade da faixa de audio e seus parametros*/
 .trilhaMonstro p{
-    font-size: 20px;
+    font-size: 22px;
     text-shadow: 2px 2px 2px yellow;
     
 }
@@ -131,22 +113,25 @@ audio {
   }
 /*paramentros para os paragrafos*/
 p{
-    font-family: "Roboto", sans-serif;
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
     text-shadow: 1px 1px 1px gray;
     margin: 1.3% ;
-    font-size: 20px;  
+    font-size: 22px;  
 }
 /*Diminuindo a pagina para ter um efeito de uma princial e uma com img de background*/
 .principal{
-    width: 70%;
+    width: 160%;
     float: right;
-    margin-right: 16%;
+    margin-top: 3%;
+    margin-right: 18%;
     border: 1px solid rgb(85, 78, 78);
     box-shadow: 3px 3px 5px gray;
     background-color: rgb(164, 177, 206,0.75);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    margin-left: 100px;
 }
 /*Propriedades da galeria de fotos e  criação da animção do carrossel de fotos*/
 .galeria{
@@ -190,51 +175,7 @@ img{
     max-width: 100%;
     height: auto;
 }
-/*paramentros dos mapas para deixar imagens responsivas e enquadradas no layot*/
-.foresthills img{
-    display: block;
-    margin: 0 auto; 
-    border: 1px solid;
-    max-width: 100%;
-    height: auto;
-    box-shadow: 3px 3px 5px gray; 
-}
 
-.jungle img{
-    display: block;
-    margin: 0 auto; 
-    border: 1px solid;
-    max-width: 100%;
-    height: auto;
-    box-shadow: 3px 3px 5px gray; 
-}
-
-.desert img{
-    display: block;
-    margin: 0 auto; 
-    border: 1px solid;
-    max-width: 100%;
-    height: auto;
-    box-shadow: 3px 3px 5px gray; 
-}
-
-.swamp img{
-    display: block;
-    margin: 0 auto; 
-    border: 1px solid;
-    max-width: 100%;
-    height: auto;
-    box-shadow: 3px 3px 5px gray; 
-}
-
-.vulcano img{
-    display: block;
-    margin: 0 auto; 
-    border: 1px solid;
-    max-width: 100%;
-    height: auto;
-    box-shadow: 3px 3px 5px gray; 
-}
 /*Parametros para layot de video e matendo ele responsivel em outros dispositivos*/
 .gameplay video{
     display: block;
