--- a/css/menu.css
+++ b/css/menu.css
@@ -9,14 +9,14 @@
     gap: 8px;
     list-style: none;
     padding: 14px;
- }
- /*Distancia da borda dos itens e adição do cursor clicavel*/ 
+}
+/*Distancia da borda dos itens e adição do cursor clicavel*/ 
 .menu-item{
     border-radius: 8px;
     padding: 14px;
     cursor: pointer;
- }
- /*Formato da tag ancor*/ 
+}
+/*Formato da tag ancor*/ 
 .menu-item a{
     text-decoration: none;
     display: flex;
@@ -84,7 +84,7 @@
     height: 0px;
 
 }
-/*Formato do sidebar*/
+/*Formato do sidebar e suas propriedades*/
 #sidebar{
     justify-content: space-between;   
     z-index: 2;
@@ -102,14 +102,37 @@
     width: 5%;
     height: 100%;
 }
-@media only screen and (max-width: 400px) {
+/*responsividade da do sidebar*/
+@media only screen and (max-width: 600px) {
     #sidebar {
-
+        width: 0; 
         margin-right: 0; 
-        height: auto; 
-    }
+        overflow: hidden; 
+    }   
+    #sidebar.abri-sidebar {
+        width: 40%; 
+    }   
 }
-
+@media only screen and (max-width: 800px) {
+    #sidebar {
+        width: 0; 
+        margin-right: 0; 
+        overflow: hidden; 
+    }   
+    #sidebar.abri-sidebar {
+        width: 30%; 
+    }   
+}
+@media only screen and (max-width: 360px) {
+    #sidebar {
+        width: 0; 
+        margin-right: 0; 
+        overflow: hidden; 
+    }   
+    #sidebar.abri-sidebar {
+        width: 30%; 
+    }   
+}
 /*Formato do tamanho manimo do sidebar e formato do menu de itens*/
 #sidebar.abri-sidebar{
     min-width:15%;
@@ -134,5 +157,97 @@
     #menu li {
         margin-left: 0; 
         margin-bottom: 5px;
+    }
+}
+
+.buscar-box{
+    width: 80px;
+    height: 30px;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    right: 0%;
+    transition: .5s;
+}
+.buscar-box.ativar{
+    width: 50%;
+    max-width: 400px;
+    background-color: white;
+    border-radius: 7px;
+}
+.buscar-box .lupa-buscar,.buscar-box .btn-fechar{
+    min-width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: gray;
+    position: relative;
+
+}
+.buscar-box .lupa-buscar i{
+    font-size: 20px;
+}
+
+.buscar-box .input-buscar{
+    position:absolute;
+    left: 40px;
+    right: 80px; 
+    height: 100%;
+    line-height: 40px;
+}
+.buscar-box .input-buscar input{
+    width: 100%;
+    height: 100%;
+    border: 0;
+    outline: 0;
+    font-size: 16px;
+    opacity: 0;
+}
+.buscar-box.ativar .input-buscar input{
+    opacity: 100;
+}
+.buscar-box .btn-fechar{
+    font-size: 20px;
+    margin-left: 10px;
+    opacity: 0;
+}
+.buscar-box.ativar .btn-fechar{
+    opacity: 100%;
+}
+@media screen and (max-width: 768px) {
+    .buscar-box .input-buscar {
+        right: 50px; 
+    }
+    .buscar-box.ativar{
+        max-width: 500px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .buscar-box .input-buscar {
+        right: 60px; 
+    }
+    .buscar-box.ativar{
+        max-width: 500px;
+    }
+}
+@media screen and (max-width: 375px) {
+    .buscar-box .input-buscar {
+        right: 40px; 
+    }
+    .buscar-box.ativar{
+        max-width: 500px;
+    }
+}
+
+@media screen and (max-width: 280px) {
+    .buscar-box .input-buscar {
+        right: 30px; 
+    }
+    .buscar-box.ativar{
+        max-width: 500px;
     }
 }
